--- a/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
+++ b/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
@@ -435,10 +435,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="tf_longitudelcampo" min="-2" pref="96" max="-2" attributes="0"/>
-                              <Component id="tf_NombredelCampo" alignment="0" min="-2" pref="168" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="tf_NombredelCampo" min="-2" pref="168" max="-2" attributes="0"/>
                           <EmptySpace pref="98" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
@@ -450,9 +447,14 @@
                           </Group>
                           <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-                          <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                                  <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="sp_LongitudCampo" alignment="0" min="-2" pref="57" max="-2" attributes="0"/>
+                          </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -498,7 +500,7 @@
                           <EmptySpace min="-2" pref="127" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jl_longitud" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="tf_longitudelcampo" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="sp_LongitudCampo" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -561,8 +563,6 @@
             <Property name="text" type="java.lang.String" value="Longitud del campo:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="tf_longitudelcampo">
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
             <Property name="text" type="java.lang.String" value="Es llave primaria?"/>
@@ -600,6 +600,8 @@
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jb_RegresarDeCrearCampoMouseClicked"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JSpinner" name="sp_LongitudCampo">
         </Component>
       </SubComponents>
     </Container>
@@ -928,7 +930,7 @@
                                   <Component id="rb_InfoIntegerCampo" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
-                              <Component id="jButton3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jb_RegresarDeDatosCampo" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -960,7 +962,7 @@
                   <EmptySpace pref="28" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jb_InfoAceptarCambiosDatos" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jb_RegresarDeDatosCampo" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -1019,12 +1021,12 @@
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jb_InfoAceptarCambiosDatosMouseClicked"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton3">
+        <Component class="javax.swing.JButton" name="jb_RegresarDeDatosCampo">
           <Properties>
             <Property name="text" type="java.lang.String" value="Regresar"/>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton3MouseClicked"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jb_RegresarDeDatosCampoMouseClicked"/>
           </Events>
         </Component>
       </SubComponents>
