--- a/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
+++ b/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
@@ -3,6 +3,15 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JDialog" name="jd_Archivo">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="0" red="0" type="rgb"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="0" red="0" type="rgb"/>
+        </Property>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -111,6 +120,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_Campos">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -216,6 +228,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_Registros">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -312,6 +327,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_indices">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -367,6 +385,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_Estandarizacion">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -422,6 +443,12 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_CrearCampo">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="0" red="0" type="rgb"/>
+        </Property>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -610,6 +637,9 @@
     <Component class="javax.swing.ButtonGroup" name="bg_LlavePrimaria">
     </Component>
     <Container class="javax.swing.JDialog" name="jd_ModificarCampo">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -699,6 +729,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_ListarCampos">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -774,6 +807,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_EliminarCampos">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -896,6 +932,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_DatosDelCampo">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -1032,6 +1071,9 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_nombre">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -1089,6 +1131,9 @@
     <Component class="javax.swing.ButtonGroup" name="bg_InfoTipoDatos">
     </Component>
     <Container class="javax.swing.JDialog" name="jd_IntroducirRegistros">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -1104,6 +1149,9 @@
       </Layout>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_ModificarRegistros">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -1119,6 +1167,9 @@
       </Layout>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_BuscarRegistros">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -1134,6 +1185,9 @@
       </Layout>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_BorrarRegistros">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -1149,6 +1203,9 @@
       </Layout>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_ListarRegistros">
+      <Properties>
+        <Property name="undecorated" type="boolean" value="true"/>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -1167,6 +1224,15 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Standard File Manager"/>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="ff" green="0" red="0" type="rgb"/>
+    </Property>
+    <Property name="bounds" type="java.awt.Rectangle" editor="org.netbeans.beaninfo.editors.RectangleEditor">
+      <Rectangle value="[0, 0, 0, 0]"/>
+    </Property>
+    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="ff" green="0" id="blue" palette="1" red="0" type="palette"/>
+    </Property>
     <Property name="name" type="java.lang.String" value="Standard File Manager" noResource="true"/>
   </Properties>
   <SyntheticProperties>
